--- a/css/app.css
+++ b/css/app.css
@@ -408,6 +408,10 @@ a, a:visited {
     perspective: 0px;
 }
 
+#leap-overlay {
+    z-index: 99999;
+}
+
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px),
        only screen and (max-device-width: 480px) {
     #overlay { -webkit-transform: translateZ(99999px); }
